syntax = "proto3";

package api.user_info;

import "google/api/annotations.proto";

option go_package = "/api/user_info;user_info";
option java_multiple_files = true;
option java_package = "api.user_info";

service UserInfo {
	// rpc CreateUserInfo (CreateUserInfoRequest) returns (CreateUserInfoReply);
	// rpc UpdateUserInfo (UpdateUserInfoRequest) returns (UpdateUserInfoReply);
	// rpc DeleteUserInfo (DeleteUserInfoRequest) returns (DeleteUserInfoReply);
	rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoReply) {
		option (google.api.http) = {
			get: "/user_info/{userID}"
		};
	}
	// rpc ListUserInfo (ListUserInfoRequest) returns (ListUserInfoReply);
}

//message CreateUserInfoRequest {}
//message CreateUserInfoReply {}
//
//message UpdateUserInfoRequest {}
//message UpdateUserInfoReply {}
//
//message DeleteUserInfoRequest {}
//message DeleteUserInfoReply {}

message GetUserInfoRequest {
	int64 userID = 1;
}
message GetUserInfoReply {
	User user = 1;
}

message User {
	int64 userID = 1;
	string name = 2;
	string ip = 3;
	string email = 4;
}
//message ListUserInfoRequest {}
//message ListUserInfoReply {}
